--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
 * {
     padding: 0;
     margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
 header img {
@@ -111,4 +112,30 @@ footer h1 {
     font-size: 14px;
     color: #999999;
     font-weight: normal;
+}
+
+/* Receitas */
+
+.resume {
+    margin: 50px 230px;
+}
+
+.about h1 {
+    font-size: 24px;
+}
+
+.resume p {
+    font-size: 18px;
+    color: #444444;
+    line-height: 28px;
+    text-align: justify;
+    margin-top: 20px;
+
+    width: 940px;
+    height: 280px;
+}
+
+.resume h2 {
+    font-size: 20px;
+    margin-top: 30px;
 }
