--- a/main.css
+++ b/main.css
@@ -145,3 +145,64 @@ footer h1 {
 }
 
 /* MODAL */
+
+ .modal-overlay {
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: fixed;
+    top: 0;
+
+    opacity: 0;
+    visibility: hidden;
+} 
+
+.modal {
+    position: relative;
+
+    display: flex;
+    align-items: center;
+
+    width: 660px;
+    height: 413px;
+    background-color: white;
+    border-radius: 16px;
+}
+
+#content img {
+    border-radius: 15px;
+    width: 600px ;
+    height: 200px;
+    margin: -90px 27px 20px;
+} 
+
+#content h1 {
+    font-weight: normal;
+    font-size: 24px;
+    text-align: center;
+}
+
+#content p {
+    margin-top: 5px;
+    font-size: 18px;
+    color: #777777;
+    text-align: center;
+}
+
+.modal-overlay.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+#content .material-icons {
+    cursor: pointer;
+    position: absolute;
+    text-align: center;
+    margin-top: 80px;
+    margin-left: 330px;
+}
