--- a/layouts/about.html
+++ b/layouts/about.html
@@ -1,14 +1,14 @@
 <html>
     <head>
         <title>Foodfy</title>
-        <link rel="stylesheet" href="/styles/main.css">
+        <link rel="stylesheet" href="/main.css">
     </head>
     <body>
         <header>
-            <a href="index.html"><img src="/img/logo.png" alt="Foodfy"></a>
+            <a href="/"><img src="img/logo.png" alt="Foodfy"></a>
 
-            <a href="about.html"><b>Sobre</b></a>
-            <a href="revenue.html">Receitas</a>
+            <a href="about"><b>Sobre</b></a>
+            <a href="revenue">Receitas</a>
         </header>
 
         <div class="sobre">
