--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,14 +2,14 @@
     <head>
         <title>Foodfy</title>
 
-        <link rel="stylesheet" href="/styles/main.css">
+        <link rel="stylesheet" href="/main.css">
     </head>
     <body>
         <header>
-            <img src="/img/logo.png" alt="Foodfy">
+            <img src="img/logo.png" alt="Foodfy">
 
-            <a href="about.html">Sobre</a>
-            <a href="revenue.html">Receitas</a>
+            <a href="about">Sobre</a>
+            <a href="revenue">Receitas</a>
         </header>
 
         <div class="begin">
