--- a/layouts/revenue.html
+++ b/layouts/revenue.html
@@ -2,7 +2,7 @@
     <head>
         <title>Foodfy</title>
 
-        <link rel="stylesheet" href="/styles/main.css">
+        <link rel="stylesheet" href="/main.css">
 
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -10,10 +10,10 @@
 
     <body>
         <header>
-            <a href="index.html"><img src="/img/logo.png" alt="Foodfy"></a>
+            <a href="/"><img src="/img/logo.png" alt="Foodfy"></a>
 
-            <a href="about.html">Sobre</a>
-            <a href="revenue.html"><b>Receitas</b></a>
+            <a href="about">Sobre</a>
+            <a href="revenue"><b>Receitas</b></a>
         </header>
 
 
@@ -126,6 +126,6 @@
             <p><spam>&copy</spam> Todos direitos reservados, receitas Foodfy.</p>
         </footer>    
 
-        <script src="/scripts/script.js"></script>
+        <script src="/script.js"></script>
     </body>
 </html>
