--- a/layouts/index.njk
+++ b/layouts/index.njk
@@ -1,29 +1,20 @@
-<html>
-    <head>
-        <title>Foodfy</title>
+{% extends "main.njk"%}
 
-        <link rel="stylesheet" href="/main.css">
-    </head>
-    <body>
-        <header>
-            <img src="img/logo.png" alt="Foodfy">
 
-            <a href="about">Sobre</a>
-            <a href="revenue">Receitas</a>
-        </header>
+{% block content %}
 
-        <div class="begin">
-            <h1>As melhores receitas</h1>
+    <div class="begin">
+        <h1>As melhores receitas</h1>
 
-            <p>Aprenda a construir os melhores pratos
-                com receitas criadas por profissionais
-                do mundo inteiro.
-            </p>
+        <p> Aprenda a construir os melhores pratos
+            com receitas criadas por profissionais
+            do mundo inteiro.
+        </p>
 
-            <img src="/img/chef.png" alt="Chef">
-        </div>
+        <img src="/img/chef.png" alt="Chef">
+    </div>
 
-        <h1>Mais acessadas</h1>
+    <h1>Mais acessadas</h1>
 
     <div class="content">
         <div class="cards">
@@ -113,9 +104,6 @@
             </div>
         </div>  
     </div> 
+{% endblock %}
 
-    <footer>
-        <p><spam>&copy</spam> Todos direitos reservados, receitas Foodfy.</p>
-    </footer>    
-</body>
-</html>
+    
