--- a/layouts/revenue.njk
+++ b/layouts/revenue.njk
@@ -1,27 +1,16 @@
-<html>
-    <head>
-        <title>Foodfy</title>
+{% extends "main.njk" %}
 
-        <link rel="stylesheet" href="/main.css">
+{% block links %}
+    <a href="about">Sobre</a>
+    <a href="revenue"><b>Receitas</b></a>
+{% endblock %}
 
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-    </head>
+{% block content %}
+    <div class="content">
 
-    <body>
-        <header>
-            <a href="/"><img src="/img/logo.png" alt="Foodfy"></a>
+    <div class="cards" id="revenue">
 
-            <a href="about">Sobre</a>
-            <a href="revenue"><b>Receitas</b></a>
-        </header>
-
-
-        <div class="content">
-
-            <div class="cards" id="revenue">
-
-                    <div class="card" id="card1">
+        <div class="card" id="card1">
 
                         <img src="/img/burger.png" alt="Hamburguer" id="burger">
 
@@ -33,9 +22,9 @@
                             <p>por Jorge Relato</p>
                         </div>
 
-                    </div>
+        </div>
                 
-                    <div class="card" id="card2">
+        <div class="card" id="card2">
 
                         <img src="/img/pizza.png" alt="Pizza" id="pizza">
 
@@ -47,9 +36,9 @@
                             <p>por Fabiana Melo</p>
                         </div>
 
-                    </div>
+        </div>
 
-                    <div class="card" id="card3">
+        <div class="card" id="card3">
 
                         <img src="/img/espaguete.png" alt="Espaguete" id="espaguete">
 
@@ -61,9 +50,9 @@
                             <p>por Júlia Kinoto</p>
                         </div>
 
-                    </div>
+        </div>
 
-                    <div class="card" id="card4">
+        <div class="card" id="card4">
 
                         <img src="/img/lasanha.png" alt="Lasanha" id="lasanha">
 
@@ -75,9 +64,9 @@
                             <p>por Juliano Vieira</p>
                         </div>
 
-                    </div>
+        </div>
 
-                    <div class="card" id="card5">
+        <div class="card" id="card5">
 
                         <img src="/img/doce.png" alt="Doce" id="doce">
 
@@ -89,9 +78,9 @@
                             <p>por Ricardo Golvea</p>
                         </div>
 
-                    </div>
+        </div>
 
-                    <div class="card" id="card6">
+        <div class="card" id="card6">
 
                         <img src="/img/asinhas.png" alt="Asinhas" id="asinhas">
 
@@ -103,29 +92,26 @@
                             <p>por Vania Steroski</p>
                         </div>
 
-                    </div>
-                
-            </div>
+        </div>                
+        </div>
+    </div>
+
+    <div class="modal-overlay">
+        <div class="modal">
+
+            <img src="" alt="">
+
+            <p></p>
+
+            <h2></h2>
+
+            <i class="material-icons">close</i>
 
         </div>
-
-        <div class="modal-overlay">
-            <div class="modal">
-
-                <img src="" alt="">
-
-                <p></p>
-
-                <h2></h2>
-
-                <i class="material-icons">close</i>
-            </div>
-        </div>
-
-        <footer>
-            <p><spam>&copy</spam> Todos direitos reservados, receitas Foodfy.</p>
-        </footer>    
-
-        <script src="/script.js"></script>
-    </body>
+    </div>
+{% endblock %}
+     
+{% block script %}
+    <script src="/script.js"></script>
+{% endblock %}
 </html>
