--- a/layouts/main.njk
+++ b/layouts/main.njk
@@ -2,8 +2,11 @@
     <head>
         <title>Foodfy</title>
 
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="/main.css">
+
+        {% block public %}
+        {% endblock %}
+
     </head>
     <body>
         <header>
