--- a/layouts/revenue.njk
+++ b/layouts/revenue.njk
@@ -10,90 +10,19 @@
 
     <div class="cards" id="revenue">
 
-        <div class="card" id="card1">
+        {% for item in items %}
 
-                        <img src="/img/burger.png" alt="Hamburguer" id="burger">
-
-                        <div class="name">
-                            <h1>Triplo Bacon Burger</h1>
-                        </div>
-
-                        <div class="autor">
-                            <p>por Jorge Relato</p>
-                        </div>
-
+        <div class="card" id= "{{item.id}}">
+            <img src="{{item.image}}" alt="{{item.title}}" id= "{{item.id}}">
+            <div class="name">
+                <h1>{{item.title}}</h1>
+            </div>
+            <div class="autor">
+                <p>por {{item.author}}</p>
+            </div>
         </div>
+        {% endfor %}
                 
-        <div class="card" id="card2">
-
-                        <img src="/img/pizza.png" alt="Pizza" id="pizza">
-
-                        <div class="name">
-                            <h1>Pizza 4 Estações</h1>
-                        </div>
-
-                        <div class="autor">
-                            <p>por Fabiana Melo</p>
-                        </div>
-
-        </div>
-
-        <div class="card" id="card3">
-
-                        <img src="/img/espaguete.png" alt="Espaguete" id="espaguete">
-
-                        <div class="name">
-                            <h1>Espaguete ao Alho</h1>
-                        </div>
-
-                        <div class="autor">
-                            <p>por Júlia Kinoto</p>
-                        </div>
-
-        </div>
-
-        <div class="card" id="card4">
-
-                        <img src="/img/lasanha.png" alt="Lasanha" id="lasanha">
-
-                        <div class="name">
-                            <h1>Lasanha Mac n’ Cheese</h1>
-                        </div>
-
-                        <div class="autor">
-                            <p>por Juliano Vieira</p>
-                        </div>
-
-        </div>
-
-        <div class="card" id="card5">
-
-                        <img src="/img/doce.png" alt="Doce" id="doce">
-
-                        <div class="name">
-                            <h1>Docinhos Pão-do-Céu</h1>
-                        </div>
-
-                        <div class="autor">
-                            <p>por Ricardo Golvea</p>
-                        </div>
-
-        </div>
-
-        <div class="card" id="card6">
-
-                        <img src="/img/asinhas.png" alt="Asinhas" id="asinhas">
-
-                        <div class="name">
-                            <h1>Asinhas de Frango ao Barbecue</h1>
-                        </div>
-
-                        <div class="autor">
-                            <p>por Vania Steroski</p>
-                        </div>
-
-        </div>                
-        </div>
     </div>
 
 {% endblock %}
