--- a/layouts/main.njk
+++ b/layouts/main.njk
@@ -10,7 +10,7 @@
     </head>
     <body>
         <header>
-            <a href="/"><img src="img/logo.png" alt="Foodfy"></a>
+            <a href="/"><img src="/img/logo.png" alt="Foodfy"></a>
 
             {% block links %}
                 <a href="about">Sobre</a>
