--- a/layouts/recipe.njk
+++ b/layouts/recipe.njk
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block links %}
-    <a href="about">Sobre</a>
-    <a href="revenue"><b>Receitas</b></a>
+    <a href="/about">Sobre</a>
+    <a href="/revenue"><b>Receitas<b></a>
 {% endblock %}
 
 {% block content %}
